--- a/style.css
+++ b/style.css
@@ -11,10 +11,9 @@ body{
 html, body{
     overflow-x: hidden;
 }
-p, h1, h2, h3, h4, a{
+p, h1, h2, h3, h4, a, strong, .avoid-wrap, .wrap-hyphen{
     margin: 0;
     font-family: 'DM Sans', sans-serif;
-    font-weight: 400;
     color: rgb(0, 0, 0);
 }
 a{
@@ -26,11 +25,21 @@ h2{
     font-family: 'DM Serif Text';
 }
 strong{
-    font-family: 'DM Sans';
+    font-weight: 700;
 }
 .text-box strong{
     font-size: 14px;
 }
+span.avoid-wrap{
+    display:inline-block;
+}
+.line-break{
+    display: inline;
+}
+.mobile-only{
+    display: none;
+}
+
 header, #pitch, #contact{
     margin-bottom: 28px;
 }
@@ -179,7 +188,7 @@ ul li a, ul p{
     mix-blend-mode: difference;
 }
 
-.left-box .column{
+.left-box .column, .right-box .column{
     width: fit-content;
 }
 .right-box .column{
@@ -200,25 +209,26 @@ ul li a, ul p{
     background: linear-gradient(rgba(255, 212, 186, 0.75), rgba(255, 213, 128, 0.75));
     box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
     backdrop-filter: blur(5px);
-    width: 100%;
     overflow-wrap: break-word;
+    hyphens: auto;
+}
+#information-wrapper .text-box{
+
 }
 .left-box .text-box, #pitch .text-box{
-    /* background: linear-gradient(rgba(164, 236, 209, 0.5), rgba(68, 204, 153, 0.5)); */
+    background: linear-gradient(rgba(164, 236, 209, 0.75), rgba(68, 204, 153, 0.75));
 }
 
 .right-box .text-box, #contact .text-box{
-    /* background: linear-gradient(rgba(246, 185, 185, 0.5), rgba(246, 131, 131, 0.5)); */
+    background: linear-gradient(rgba(246, 185, 185, 0.75), rgba(246, 131, 131, 0.75));
 }
-#information-text{
+.information-text{
     justify-content: center;
     align-items: flex-start;
     gap: 84px;
-}
-#information-text{
     font-size: 13px;
 }
-#information-text div{
+.information-text div{
     width: 50%;
 }
 .left-text{
@@ -295,6 +305,16 @@ span{
 /* Mobile */
 
 @media only screen and (max-width: 768px){
+    .desktop-only{
+        display: none;
+    }
+    .mobile-only{
+        display: inline;
+    }
+    .line-break{
+        display: none;
+    }
+    
     header ul li a, .line{
         display: none;
     }
@@ -315,7 +335,7 @@ span{
         border-radius: 45px;
         max-width: 90vw;
         height: auto;
-        padding: 7px 28px 28px 28px;
+        padding: 7px 21px 21px 21px;
         background-position: bottom center;
         background-size: auto 80%;
     }
@@ -334,7 +354,9 @@ span{
         justify-content: space-between;
     }
     #information-wrapper .text-box{
-        width: 100%;
+        width: auto;
+        text-wrap: wrap;
+        overflow-wrap: anywhere;
     }
 
     #pitch .area-box{
