--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ span.avoid-wrap{
     display: none;
 }
 
-header, #pitch, #contact{
+header, #introduction, #pricing, #pitch, #contact{
     margin-bottom: 28px;
 }
 .centered{
@@ -148,18 +148,24 @@ ul li a, ul p{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 28px 0 14px 0;
+    margin: 28px 0 0 0;
     gap: 28px;
     max-width: 100%;
 }
-#information-wrapper .area-box{
+.left, .right{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 14px;
+}
+formation-wrapper .area-box{
     height: 250px;
     width: 100%;
     padding: 28px 28px 28px 28px;
     box-shadow: inset 0 0 14px 0 rgb(0, 0, 0, 0.15);
     box-sizing: border-box;
 }
-.left-box{
+.left .area-box{
     justify-content: flex-end;
     border-radius: 0 40px 40px 0;
     background-image: url(images/squash-player2.png); 
@@ -167,7 +173,7 @@ ul li a, ul p{
     background-position: right 20vw top 14px;
     background-size: auto 100%;
 }
-.right-box{
+.right .area-box{
     justify-content: flex-start;
     border-radius: 40px 0 0 40px;
     background-image: url(images/squash-racket2.png); 
@@ -215,13 +221,13 @@ ul li a, ul p{
 #information-wrapper .text-box{
 
 }
-.left-box .text-box, #pitch .text-box{
+/* .left .text-box, #pitch .text-box{
     background: linear-gradient(rgba(164, 236, 209, 0.75), rgba(68, 204, 153, 0.75));
 }
 
-.right-box .text-box, #contact .text-box{
+.right .text-box, #contact .text-box{
     background: linear-gradient(rgba(246, 185, 185, 0.75), rgba(246, 131, 131, 0.75));
-}
+} */
 .information-text{
     justify-content: center;
     align-items: flex-start;
@@ -231,11 +237,17 @@ ul li a, ul p{
 .information-text div{
     width: 50%;
 }
-.left-text{
+.left .text{
+    max-width: 100%;
+    justify-content: flex-end;
     text-align: right;
+    padding-right: 28px;
 }
-.right-text{
+.right .text{
+    max-width: 100%;
+    justify-content: flex-start;
     text-align: left;
+    padding-left: 28px;
 }
 /* #information-text .text:first-child{
     width: 240px;
@@ -247,6 +259,7 @@ ul li a, ul p{
 .transparent{
     background-color: rgb(0, 0, 0, 0);
     background-image: none;
+    padding: 0;
 }
 #pricing img{
     height: 98px;
@@ -297,6 +310,7 @@ footer .area-box{
     box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
     width: 100%;
     box-sizing: border-box;
+    background: linear-gradient(to right, #FFF8F1, rgba(255, 212, 186, 0.75), #FFF8F1);
 }
 span{
     font-family: 'Times New Roman', Times, serif;
@@ -334,22 +348,31 @@ span{
         background-color: #FFFFFF;
     }
 
+    #introduction, #pricing, #pitch, #contact{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
     #information-wrapper{
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    #information-wrapper .left-box, #information-wrapper .right-box{
+    .left .area-box, .right .area-box{
         justify-content: center;
         align-items: flex-end;
         border-radius: 45px;
-        max-width: 95vw;
+        width: 100vw;
         height: auto;
         padding: 7px 21px 21px 21px;
         background-position: bottom center;
         background-size: auto 80%;
+        box-shadow: 0 0 21px 0 rgb(0, 0, 0, 0.15);
+        box-sizing: border-box;
     }
-    #information-wrapper .left-box{
+    #information-wrapper .left .area-box{
         background-position: bottom left 40%;
     }
     #information-wrapper .area-box .column{
@@ -375,6 +398,12 @@ span{
     }
 
     #pitch .area-box{
-        width: 95vw;
+        max-width: 100vw;
+        box-shadow: 0 0 21px 0 rgb(0, 0, 0, 0.15);
     }
+
+    #contact .area-box{
+        width: 100vw;
+    }
+
 }
