--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 html, body{
     overflow-x: hidden;
 }
-p, h1, h2, h3, h4, a, strong, .avoid-wrap, .wrap-hyphen{
+p, h1, h2, h3, h4, a, strong, .desktop-only, .avoid-wrap, .wrap-hyphen{
     margin: 0;
     font-family: 'DM Sans', Arial, Helvetica, sans-serif;
     color: rgb(0, 0, 0);
@@ -36,8 +36,11 @@ span.avoid-wrap{
 .line-break{
     display: inline;
 }
+.desktop-only{
+    display: auto;
+}
 .mobile-only{
-    display: none;
+    display: none !important;
 }
 
 header, #introduction, #pricing, #pitch, #contact{
@@ -158,7 +161,7 @@ ul li a, ul p{
     width: 100%;
     gap: 14px;
 }
-formation-wrapper .area-box{
+.information-wrapper .area-box{
     height: 250px;
     width: 100%;
     padding: 28px 28px 28px 28px;
@@ -290,7 +293,6 @@ formation-wrapper .area-box{
     box-shadow: inset 0 0 14px 0 rgb(0, 0, 0, 0.15);
 }
 #pitch br{
-    height: 1px;
 }
 .text.box img{
     opacity: 0.5;
@@ -323,10 +325,10 @@ span{
         background-color: #FFF8F1;
     }
     .desktop-only{
-        display: none;
+        display: none !important;
     }
     .mobile-only{
-        display: inline;
+        display: inline !important;
     }
     .line-break{
         display: none;
@@ -341,8 +343,8 @@ span{
         text-align: left;
     }
     header .area-box{
-        background: none;
-        background-color: #FFFFFF;
+        /* background: none;
+        background-color: #FFFFFF; */
     }
     .area-box{
         background-color: #FFFFFF;
@@ -386,19 +388,32 @@ span{
         width: 100%;
         justify-content: space-between;
     }
+    #information-wrapper .text-box{
+        max-width: 40%;
+    }
     .text-box{
         width: auto;
         text-wrap: wrap;
         overflow-wrap: anywhere;
         line-height: 1.5;
     }
+    /* .text-box p{
+        font-size: 11px;
+    }
+    .text-box strong{
+        font-size: 12px;
+    } */
 
     #pricing .area-box, #contact .area-box{
         background-color: transparent;
     }
 
+    #pricing .area-box{
+        padding: 0 21px 0 21px;
+    }
+
     #pitch .area-box{
-        max-width: 100vw;
+        width: 100vw;
         box-shadow: 0 0 21px 0 rgb(0, 0, 0, 0.15);
     }
 
