--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ ul li a, ul p{
     background-repeat: no-repeat;
     background-position: right 20vw top 14px;
     background-size: auto 100%;
+    box-shadow: inset 0 0 14px 0 rgb(0, 0, 0, 0.15);
 }
 .right .area-box{
     justify-content: flex-start;
@@ -183,6 +184,7 @@ ul li a, ul p{
     background-repeat: no-repeat;
     background-position: left 20vw top 14px;
     background-size: auto 100%;
+    box-shadow: inset 0 0 14px 0 rgb(0, 0, 0, 0.15);
 }
 .background-blur{
     backdrop-filter: blur(5px);
@@ -197,10 +199,7 @@ ul li a, ul p{
     mix-blend-mode: difference;
 }
 
-.left-box .column, .right-box .column{
-    width: fit-content;
-}
-.right-box .column{
+.left .area-box .column, .right .area-box .column{
     width: fit-content;
 }
 .image-wrapper{
@@ -262,7 +261,6 @@ ul li a, ul p{
 .transparent{
     background-color: rgb(0, 0, 0, 0);
     background-image: none;
-    padding: 0;
 }
 #pricing img{
     height: 98px;
@@ -290,7 +288,7 @@ ul li a, ul p{
     box-sizing: border-box;
 }
 #pitch .area-box{
-    box-shadow: inset 0 0 14px 0 rgb(0, 0, 0, 0.15);
+    box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
 }
 .text.box img{
     opacity: 0.5;
@@ -320,7 +318,7 @@ span{
 
 @media only screen and (max-width: 768px){
     body{
-        background-color: #FFF8F1;
+        background: linear-gradient(rgba(255, 212, 186, 0.75),#FFF8F1,rgba(255, 212, 186, 0.75));
     }
     .desktop-only{
         display: none !important;
@@ -340,9 +338,9 @@ span{
         width: 90vw;
         text-align: left;
     }
-    header .area-box{
-        /* background: none;
-        background-color: #FFFFFF; */
+    header .area-box, footer .area-box{
+        background: none;
+        background-color: #FFFFFF;
     }
     .area-box{
         background-color: #FFFFFF;
@@ -366,28 +364,28 @@ span{
         border-radius: 45px;
         width: 100vw;
         height: auto;
-        padding: 7px 21px 21px 21px;
+        padding: 14px 21px 21px 21px;
         background-position: bottom center;
         background-size: auto 80%;
         box-shadow: 0 0 21px 0 rgb(0, 0, 0, 0.15);
         box-sizing: border-box;
     }
     #information-wrapper .left .area-box{
-        background-position: bottom left 40%;
+        background-position: bottom left 30%;
     }
     #information-wrapper .area-box .column{
         justify-content: space-between;
         align-items: space-between;
         width: 100%;
         height: 100%;
-        gap: 35px;
+        gap: 77px;
     }
     #information-wrapper .row{
         width: 100%;
         justify-content: space-between;
     }
     #information-wrapper .text-box{
-        max-width: 40%;
+        width: 100%;
     }
     .text-box{
         width: auto;
@@ -407,7 +405,6 @@ span{
     }
 
     #pricing .area-box, #contact .area-box{
-        padding: 0 21px 0 21px;
     }
 
     #pitch .area-box{
