--- a/style.css
+++ b/style.css
@@ -60,9 +60,7 @@ header, #introduction, #pricing, #pitch, #contact{
     padding: 28px;
     gap: 28px;
     border-radius: 45px;
-    p{
-        font-size: 13px;
-    }
+
 }
 .column{
     display: flex;
@@ -230,12 +228,6 @@ ul li a, ul p{
 .right .text-box, #contact .text-box{
     background: linear-gradient(rgba(246, 185, 185, 0.75), rgba(246, 131, 131, 0.75));
 } */
-.information-text{
-    justify-content: center;
-    align-items: flex-start;
-    gap: 84px;
-    font-size: 13px;
-}
 .information-text div{
     width: 50%;
 }
@@ -318,7 +310,6 @@ span{
 
 @media only screen and (max-width: 768px){
     body{
-        background: linear-gradient(rgba(255, 212, 186, 0.75),#FFF8F1,rgba(255, 212, 186, 0.75));
     }
     .desktop-only{
         display: none !important;
@@ -336,17 +327,19 @@ span{
 
     .text{
         width: 90vw;
+        max-width: 90vw;
         text-align: left;
+        justify-content: flex-start;
     }
     header .area-box, footer .area-box{
         background: none;
-        background-color: #FFFFFF;
+        background: linear-gradient(to right, #FFF8F1, rgba(255, 212, 186, 0.5), #FFF8F1);
     }
     .area-box{
         background-color: #FFFFFF;
     }
 
-    #introduction, #pricing, #pitch, #contact{
+    #introduction, .left, .right, #pricing, #pitch, #contact{
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -373,19 +366,21 @@ span{
     #information-wrapper .left .area-box{
         background-position: bottom left 30%;
     }
+    .background-blur{
+        backdrop-filter: blur(0);
+    }
     #information-wrapper .area-box .column{
         justify-content: space-between;
         align-items: space-between;
         width: 100%;
         height: 100%;
-        gap: 77px;
+        gap: 70px;
     }
     #information-wrapper .row{
         width: 100%;
         justify-content: space-between;
     }
     #information-wrapper .text-box{
-        width: 100%;
     }
     .text-box{
         width: auto;
@@ -393,12 +388,12 @@ span{
         overflow-wrap: anywhere;
         line-height: 1.5;
     }
-    /* .text-box p{
-        font-size: 11px;
+    .left .text, .right .text{
+        width: 90vw;
+        justify-content: flex-start;
+        text-align: left;
+        padding: 0;
     }
-    .text-box strong{
-        font-size: 12px;
-    } */
 
     #pricing .area-box, #contact .area-box{
         background-color: transparent;
