--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ span{
         background: linear-gradient(to right, #FFF8F1, rgba(255, 212, 186, 0.5), #FFF8F1);
     }
     .area-box{
-        background-color: #FFFFFF;
+        background-color: #FFF8F1;
         padding: 21px;
     }
 
