--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header, #introduction, #pricing, #pitch, #contact{
     padding: 28px;
     gap: 28px;
     border-radius: 45px;
-
+    box-sizing: border-box;
 }
 .column{
     display: flex;
@@ -269,7 +269,6 @@ ul li a, ul p{
     box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
 } */
 #pricing .text-box{
-    
 }
 #pricing .text-box strong{
     font-size: 16px;
@@ -302,6 +301,9 @@ footer .area-box{
     box-sizing: border-box;
     background: linear-gradient(to right, #FFF8F1, rgba(255, 212, 186, 0.75), #FFF8F1);
 }
+footer img{
+    height: 10px;
+}
 span{
     font-family: 'Times New Roman', Times, serif;
 }
@@ -326,7 +328,7 @@ span{
     }
 
     .text{
-        width: 90vw;
+        width: 100%;
         max-width: 90vw;
         text-align: left;
         justify-content: flex-start;
@@ -336,8 +338,9 @@ span{
         background: linear-gradient(to right, #FFF8F1, rgba(255, 212, 186, 0.5), #FFF8F1);
     }
     .area-box{
-        background-color: #FFF8F1;
+        background-color: #FFFFFF;
         padding: 21px;
+        width: 95vw;
     }
 
     #introduction, .left, .right, #pricing, #pitch, #contact{
@@ -356,26 +359,24 @@ span{
         justify-content: center;
         align-items: flex-end;
         border-radius: 45px;
-        width: 100vw;
+        width: 95vw;
         height: auto;
         padding: 14px 21px 21px 21px;
         background-position: bottom center;
         background-size: auto 80%;
-        box-shadow: 0 0 21px 0 rgb(0, 0, 0, 0.15);
-        box-sizing: border-box;
     }
     #information-wrapper .left .area-box{
         background-position: bottom left 30%;
     }
     .background-blur{
-        backdrop-filter: blur(0);
+        backdrop-filter: blur(0);    
     }
     #information-wrapper .area-box .column{
         justify-content: space-between;
         align-items: space-between;
         width: 100%;
         height: 100%;
-        gap: 70px;
+        gap: 91px;
     }
     #information-wrapper .row{
         width: 100%;
@@ -390,7 +391,6 @@ span{
         overflow-wrap: normal;
         line-height: 1.5;
         flex: 1;
-        max-width: 35%;
     }
     .left .text, .right .text{
         width: 90vw;
@@ -399,26 +399,20 @@ span{
         padding: 0;
     }
 
-    #pricing .area-box, #contact .area-box{
-        background-color: transparent;
+    #pricing .area-box, #contact .area-box, #pitch .area-box{
+        width: 95vw;
     }
 
-    #pricing .area-box, #contact .area-box{
+    #information-wrapper .area-box, #pitch .area-box{
+        box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
     }
 
-    #pitch .area-box{
-        width: 100vw;
-        box-shadow: 0 0 21px 0 rgb(0, 0, 0, 0.15);
-    }
-    #pitch .row .text-box{
-        width: 50%;
-    }
-    .text-box strong{
+    /* .text-box strong{
         font-size: 13px;
-    }
+    } */
 
     #contact .area-box{
-        width: 100vw;
+        width: 95vw;
     }
     #contact .row{
         flex-direction: column;
