--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ span{
     }
     .area-box{
         background-color: #FFFFFF;
-        padding: 21px;
+        padding: 14px 21px 21px 21px;
         width: 95vw;
     }
 
