--- a/style.css
+++ b/style.css
@@ -354,6 +354,11 @@ span{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: 100%;
+        gap: 14px;
+    }
+    .left, .right{
+        gap: 0;
     }
     .left .area-box, .right .area-box{
         justify-content: center;
@@ -364,6 +369,8 @@ span{
         padding: 14px 21px 21px 21px;
         background-position: bottom center;
         background-size: auto 80%;
+        background-color: transparent;
+        box-shadow: inset 0 0 0 0;
     }
     #information-wrapper .left .area-box{
         background-position: bottom left 30%;
@@ -393,10 +400,12 @@ span{
         flex: 1;
     }
     .left .text, .right .text{
-        width: 90vw;
-        justify-content: flex-start;
+        width: 95vw;
         text-align: left;
-        padding: 0;
+        padding: 14px 21px;
+        box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
+        box-sizing: border-box;
+        border-radius: 21px;
     }
     .left .text-box{
         max-width: fit-content;
@@ -406,13 +415,17 @@ span{
         width: 95vw;
     }
 
-    #information-wrapper .area-box, #pitch .area-box{
+    #pitch .area-box{
         box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
     }
 
     /* .text-box strong{
         font-size: 13px;
     } */
+
+    #pitch .text-box{
+        text-align: left;
+    }
 
     #contact .area-box{
         width: 95vw;
