--- a/style.css
+++ b/style.css
@@ -104,14 +104,14 @@ header .area-box{
 }
 
 .combo-mark h1{
-    margin-top: -7px;
+    margin-top: -5px;
     font-size: 34px;
     font-family: 'DM Serif Text';
     font-weight: 400;
     line-height: 1.25;
 }
 .combo-mark h2{
-    margin-top: -7px;
+    margin-top: -10px;
     font-size: 19px;
     font-weight: 400;
     font-family: 'DM Serif Text';
@@ -330,6 +330,28 @@ span{
     .line-break{
         display: none;
     }
+    .logo{
+        width: 60px;
+        height: 100%;
+    }
+
+    .combo-mark{
+        gap: 4px;
+    }
+    
+    .combo-mark h1{
+        margin-top: -4px;
+        font-size: 29px;
+        font-family: 'DM Serif Text';
+        font-weight: 400;
+        line-height: 1.25;
+    }
+    .combo-mark h2{
+        margin-top: -9px;
+        font-size: 16px;
+        font-weight: 400;
+        font-family: 'DM Serif Text';
+    }
     
     header ul li a, .line{
         display: none;
@@ -380,9 +402,15 @@ span{
         background-color: transparent;
         box-shadow: inset 0 0 0 0;
     }
+    .left .area-box{
+        background-image: url(images/squash-player-hd-denoised.png);
+    }
+    .right .area-box{
+        background-image: url(images/squash-racket-hd.png);
+    }
     #information-wrapper .left .area-box{
-        background-position: bottom right 70%;
-        background-size: auto 90%;
+        background-position: bottom center;
+        background-size: auto 95%;
     }
     .background-blur{
         backdrop-filter: blur(0);    
@@ -392,7 +420,7 @@ span{
         align-items: space-between;
         width: 100%;
         height: 100%;
-        gap: 49px;
+        gap: 91px;
     }
     #information-wrapper .row{
         width: 100%;
@@ -408,39 +436,44 @@ span{
         line-height: 1.5;
         flex: 1;
     }
+    .text-box p{
+        font-size: 12px;
+    }
+    .text-box strong{
+        font-size: 13px;
+    }
     .left .text, .right .text{
         width: 90vw;
         text-align: left;
         padding: 14px;
-        box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
+        box-shadow: 0 7px 14px 0 rgb(0, 0, 0, 0.15);
         border-radius: 21px;
         box-sizing: border-box;
+        background-color: #FFF8F1;
     }
     .left .text-box{
         max-width: fit-content;
     }
     .right .text-box{
-        max-width: 35%;
+        max-width: 40%;
     }
     #information-wrapper .text-box{
         flex: 1;
     }
 
-    #pricing .area-box, #contact .area-box, #pitch .area-box{
+    #pricing .area-box, #contact .area-box{
         width: 95vw;
     }
 
     #pitch .area-box{
+        width: 100vw;
         box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
-        background: url(images/squash-racket-and-ball.png);
+        background: url(images/squash-racket-and-ball-sat.png);
         background-position: top 50vw right 50.25%;
         background-size: 400%;
         background-repeat: no-repeat;
+        background-color: #FFF8F1;
     }
-
-    /* .text-box strong{
-        font-size: 13px;
-    } */
 
     #pitch .text-box{
         text-align: left;
