--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ span{
     }
 
     .combo-mark{
-        gap: 4px;
+        gap: 5px;
     }
     
     .combo-mark h1{
@@ -393,8 +393,8 @@ span{
     .left .area-box, .right .area-box{
         justify-content: center;
         align-items: flex-end;
-        border-radius: 45px;
-        width: 90vw;
+        border-radius: 0;
+        width: 100vw;
         height: auto;
         padding: 0 0 21px 0;
         background-position: bottom center;
@@ -418,7 +418,7 @@ span{
     #information-wrapper .area-box .column{
         justify-content: space-between;
         align-items: space-between;
-        width: 100%;
+        width: 90vw;
         height: 100%;
         gap: 91px;
     }
@@ -440,16 +440,15 @@ span{
         font-size: 12px;
     }
     .text-box strong{
-        font-size: 13px;
+        font-size: 14px;
     }
     .left .text, .right .text{
-        width: 90vw;
+        width: 100vw;
         text-align: left;
         padding: 14px;
         box-shadow: 0 7px 14px 0 rgb(0, 0, 0, 0.15);
         border-radius: 21px;
         box-sizing: border-box;
-        background-color: #FFF8F1;
     }
     .left .text-box{
         max-width: fit-content;
