--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ ul li a, ul p{
     background-color: rgb(0, 0, 0, 0);
     background-image: none;
     box-shadow: 0 0 0 0 rgb(0, 0, 0, 0);
+    z-index: -1;
 }
 #pricing img{
     height: 98px;
@@ -434,7 +435,7 @@ span{
         align-items: space-between;
         width: 90vw;
         height: 100%;
-        gap: 98px;
+        gap: 70px;
     }
     #information-wrapper .row{
         width: 100%;
@@ -478,11 +479,8 @@ span{
 
     #pitch .area-box{
         width: 100vw;
-        box-shadow: 0 0 14px 0 rgb(0, 0, 0, 0.15);
+        box-shadow: 0 7px 14px 0 rgb(0, 0, 0, 0.15);
         background: none;
-        /* background-position: top 30vh center;
-        background-size: cover;
-        background-repeat: no-repeat; */
         background-color: #FFF8F1;
     }
     #pitch .row{
