--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ span{
     }
     #information-wrapper .left .area-box{
         background-position: bottom center;
-        background-size: auto 90%;
+        background-size: auto 93%;
     }
     .background-blur{
         backdrop-filter: blur(0);    
@@ -440,7 +440,7 @@ span{
     }
     #information-wrapper .row{
         width: 100%;
-        justify-content: space-between;
+        justify-content: center;
     }
     #information-wrapper .text-box{
         width: auto;
